--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,27 @@
 {
-    "name": "codermarcel/convinient-controller",
+    "name": "codermarcel/simple-controller",
 	"type": "package",
 	"description": "A convinient abstract controller for silex",
 	"keywords": ["silex", "controller"],
 	"homepage": "https://github.com/codermarcel/ConvinientController",
 	"authors": [
-        {
-            "name": "Marcel",
-            "email": "codermarcel@gmail.com",
-        }
+		{
+			"name": "Marcel",
+            "email": "codermarcel@gmail.com"
+		}
     ],
     "autoload": {
-        "psr-4" : {
-            "codermarcel\\ConvinientController" : "src"
+        "psr-0": {
+            "SimpleController": "src",
+            "SimpleController\\Tests\\": "tests"
         }
     },
 	"require": {
         "silex/silex": "~1.3"
+    },
+	"require-dev": {
+        "phpunit/phpunit": "5.0.*",
+        "symfony/browser-kit": "^2.7",
+        "symfony/css-selector": "^2.7"
     }
 }
