--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "autoload": {
         "psr-0": {
-            "SimpleController": "src",
-            "SimpleController\\Tests\\": "tests"
+            "Codermarcel\\SimpleController": "src",
+            "Codermarcel\\SimpleController\\Tests\\": "tests"
         }
     },
 	"require": {
