--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "codermarcel/simple-controller",
 	"type": "package",
-	"description": "Convinient and simple silex controller using reflection",
+	"description": "Convenient and simple silex controller using reflection",
 	"keywords": ["silex", "controller"],
     "license": "MIT",
 	"authors": [
